--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-expo-app",
+  "name": "library_app",
   "version": "1.0.0",
   "scripts": {
     "android": "expo start --android",
@@ -11,13 +11,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@supabase/supabase-js": "^2.95.3",
     "expo": "^54.0.0",
+    "expo-constants": "^18.0.13",
+    "expo-linking": "^8.0.11",
+    "expo-router": "^6.0.23",
+    "expo-secure-store": "^15.0.8",
     "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "^6.0.9",
+    "expo-web-browser": "^15.0.10",
     "nativewind": "latest",
-    "react": "19.1.0",
+    "openai": "^6.21.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-native": "0.81.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "^4.23.0",
+    "react-native-url-polyfill": "^3.0.0",
+    "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
@@ -27,10 +40,10 @@
     "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.1.2",
     "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.4.0",
     "typescript": "~5.9.2"
   },
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "private": true
 }
