--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "expo-web-browser": "^15.0.10",
     "nativewind": "latest",
     "openai": "^6.21.0",
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-native": "0.81.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "^4.23.0",
+    "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "0.5.1"
